--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Natalia Teaca Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
 </head>
 
 <body>
     <!--Navigation-->
     <header>
          <h1>N. TEACA </h1>
-         <nav>
+         <nav class="menu" id="menu">
           <!--Unordered list element -->
             <ul>
              <!-- List item element-->
@@ -34,7 +36,7 @@
     <!--hero-->
     <section class="hero">
         <div class="hero-cta">
-            <h3>Bringing Your Ideas to Life.</h3>
+            <span class="quote"><h3>Bringing Your Ideas to Life.</h3></span>
         </div>
     </section>
  
