--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 
 
                     <div class="grid-image-2">
-                        <a href="https://natka58.github.io/run-buddy/" target="https://natka58.github.io/run-buddy/">
-                            <img src="assets/images/hero-bg.jpg" class="gallery-images" /></a>
+                        <a href="https://murmuring-anchorage-27916.herokuapp.com/" target="https://murmuring-anchorage-27916.herokuapp.com/">
+                            <img src="assets/images/trakster.png" class="gallery-images" /></a>
                         <div class="label">
-                            <h3>Run Buddy
-                                <span>HTML/CSS</span></h3>
+                            <h3>Trakster
+                                <span>JavaScript/HTML/CSS/MySql</span></h3>
                         </div>
                     </div>
 
@@ -103,7 +103,7 @@
                             <img src="assets/images/covie.png" class="gallery-images" /></a>
                             <div class="label">
                                 <h3>CoVIe SEARCH
-                                    <span>HTML/Bootstrap/JavaCode</span></h3>
+                                    <span>HTML/Bootstrap/JavaScript</span></h3>
                             </div>
                         </div>
 
