--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
                     <div class="grid-image-2">
-                        <a href="https://murmuring-anchorage-27916.herokuapp.com/" target="https://murmuring-anchorage-27916.herokuapp.com/">
+                        <a href="https://project-trakster.herokuapp.com/" target="https://project-trakster.herokuapp.com/">
                             <img src="assets/images/trakster.png" class="gallery-images" /></a>
                         <div class="label">
                             <h3>Trakster
